[gd_scene load_steps=9 format=3 uid="uid://dvvo6h8mqriso"]

[ext_resource type="Script" path="res://WorldStuff/Cells/Cell.gd" id="1_esaly"]

[sub_resource type="QuadMesh" id="QuadMesh_xymg6"]

[sub_resource type="QuadMesh" id="QuadMesh_ru5hw"]

[sub_resource type="QuadMesh" id="QuadMesh_ncl3m"]

[sub_resource type="QuadMesh" id="QuadMesh_a02bm"]

[sub_resource type="QuadMesh" id="QuadMesh_pmqu3"]

[sub_resource type="QuadMesh" id="QuadMesh_7fevh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t6c07"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Cell" type="Area3D"]
collision_mask = 0
script = ExtResource("1_esaly")

[node name="WestWall" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 0, 0)
mesh = SubResource("QuadMesh_xymg6")

[node name="EastWall" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.5, 0, 0)
mesh = SubResource("QuadMesh_ru5hw")

[node name="NorthWall" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("QuadMesh_ncl3m")
skeleton = NodePath("../EastWall")

[node name="SouthWall" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0.5)
mesh = SubResource("QuadMesh_a02bm")
skeleton = NodePath("../NorthWall")

[node name="Roof" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, 0)
mesh = SubResource("QuadMesh_pmqu3")
skeleton = NodePath("../SouthWall")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.5, 0)
mesh = SubResource("QuadMesh_7fevh")
skeleton = NodePath("../Roof")

[node name="CellHitBox" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_t6c07")
